syntax = "proto3";
package proto;

    
message ServerState {
    string serverID = 1;
}

enum Op {
    CREATE_PARTITION = 0;
    SHRINK_ISR       = 1;
    REPORT_LEADER    = 2;
    CHANGE_LEADER    = 3;
    EXPAND_ISR       = 4;
}

message RaftLog {
    Op                op                = 1;
    CreatePartitionOp createPartitionOp = 2;
    ShrinkISROp       shrinkISROp       = 3;
    ChangeLeaderOp    changeLeaderOp    = 4;
    ExpandISROp       expandISROp       = 5;
}

message CreatePartitionOp {
    Partition partition = 1;
}

message ShrinkISROp {
    string subject         = 1;
    string name            = 2;
    int32  partition       = 3;
    string replicaToRemove = 4;
    string leader          = 5;
    uint64 leaderEpoch     = 6;
}

message ExpandISROp {
    string subject      = 1;
    string name         = 2;
    int32  partition    = 3;
    string replicaToAdd = 4;
    string leader       = 5;
    uint64 leaderEpoch  = 6;
}

message ReportLeaderOp {
    string subject     = 1;
    string name        = 2;
    int32  partition   = 3;
    string replica     = 4;
    string leader      = 5;
    uint64 leaderEpoch = 6;
}

message ChangeLeaderOp {
    string subject   = 1;
    string name      = 2;
    int32  partition = 3;
    string leader    = 4;
}

message Partition {
    string          subject           = 1;
    string          name              = 2;
    int32           id                = 3;
    string          group             = 4;
    int32           replicationFactor = 5;
    repeated string replicas          = 6;
    string          leader            = 7;
    repeated string isr               = 8;
    uint64          leaderEpoch       = 9;
    uint64          epoch             = 10;
    int32           totalPartitions   = 11;
}

// RaftJoinRequest is a request to join a Raft group.
message RaftJoinRequest {
    string nodeID   = 1; // ID of the joining node.
    string nodeAddr = 2; // Address of the joining node.
}

// RaftJoinResponse is a response to a RaftJoinRequest.
message RaftJoinResponse {
    string error = 1; // Error string, omitted if no error. 
}

message Stream {
    string                name       = 1;
    string                subject    = 2;
    map<int32, Partition> partitions = 3;
}

message MetadataSnapshot {
    repeated Stream streams = 1;
}

message ReplicationRequest {
    string replicaID = 1;
    int64  offset    = 2;
}

message LeaderEpochOffsetRequest {
    uint64 leaderEpoch = 1;
}

message LeaderEpochOffsetResponse {
    int64 endOffset = 1;
}

message PropagatedRequest {
    Op                op                = 1;
    CreatePartitionOp createPartitionOp = 2;
    ShrinkISROp       shrinkISROp       = 3;
    ReportLeaderOp    reportLeaderOp    = 4;
    ExpandISROp       expandISROp       = 5;
}

message Error {
    uint32 code = 1;
    string msg  = 2;
}

message PropagatedResponse {
    Op                   op               = 1;
    Error                error            = 2;
    // Reserving = 3 for createPartitionResp if needed.
    // Reserving = 4 for shrinkISRResp if needed.
    // Reserving = 5 for reportLeaderResp if needed.
    // Reserving = 6 for expandISRResp if needed.
}

message ServerInfoRequest {
    string id = 1;
}

message ServerInfoResponse {
    string id   = 1;
    string host = 2;
    int32  port = 3;
}

message PartitionStatusRequest {
    string subject   = 1;
    string name      = 2;
    int32  partition = 3;
}

message PartitionStatusResponse {
    bool exists   = 1;
    bool isLeader = 2;
}
